select file or folder path

--- a/env_installer/jlab_server.yaml
+++ b/env_installer/jlab_server.yaml
@@ -9,7 +9,7 @@ dependencies:
   - pip
   - python 3.11*
 platforms:
-  # - linux-64
+  - linux-64
   # - linux-aarch64
   # - osx-64
   # - osx-arm64
