--- a/package.json
+++ b/package.json
@@ -171,7 +171,9 @@
   "private": true,
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
+    "@electron/notarize": "^2.3.0",
     "@jupyter-notebook/web-components": "0.9.1",
+    "@leeoniya/ufuzzy": "1.0.14",
     "@types/ejs": "^3.1.0",
     "@types/js-yaml": "^4.0.3",
     "@types/node": "^14.14.31",
@@ -183,10 +185,9 @@
     "@types/yargs": "^17.0.18",
     "@typescript-eslint/eslint-plugin": "~5.28.0",
     "@typescript-eslint/parser": "~5.28.0",
-    "@leeoniya/ufuzzy": "1.0.14",
+    "dotenv": "^16.4.5",
     "electron": "^27.0.2",
     "electron-builder": "^24.9.1",
-    "electron-notarize": "^1.2.2",
     "eslint": "~8.17.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-prettier": "~4.0.0",
