--- a/package.json
+++ b/package.json
@@ -168,6 +168,10 @@
     "url": "https://github.com/mljar/support/issues"
   },
   "homepage": "https://mljar.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mljar/support"
+  },
   "private": true,
   "license": "SEE LICENSE IN LICENSE",
   "devDependencies": {
@@ -212,6 +216,7 @@
   },
   "dependencies": {
     "@lumino/signaling": "^1.10.0",
+    "@vscode/sudo-prompt": "^9.3.1",
     "ejs": "^3.1.7",
     "electron-log": "^4.4.8",
     "fast-xml-parser": "^4.2.5",
