--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "compress_env_installer:osx-64": "yarn compress_env_installer:osx",
     "compress_env_installer:osx-arm64": "yarn compress_env_installer:osx",
     "check_version_match": "node scripts/buildutil.js --check-version-match",
-    "update_binary_sign_list": "node scripts/buildutil.js --update-binary-sign-list",
+    "update_binary_sign_list:osx-arm64": "node scripts/buildutil.js --update-binary-sign-list --platform osx-arm64",
+    "update_binary_sign_list:osx-64": "node scripts/buildutil.js --update-binary-sign-list --platform osx-64",
     "copy_extras_to_bundled_env": "node scripts/buildutil.js --copy-extras-to-bundled-env",
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx --cache --fix .",
     "eslint:check": "eslint --ext .js,.jsx,.ts,.tsx --cache .",
