--- a/env_installer/extras/etc/jupyter/labconfig/page_config.json
+++ b/env_installer/extras/etc/jupyter/labconfig/page_config.json
@@ -1,5 +1,6 @@
 {
     "disabledExtensions": {
-        "@jupyterlab/apputils-extension:announcements": true
+        "@jupyterlab/apputils-extension:announcements": true,
+        "@jupyterlab/extensionmanager-extension": true
     }
 }
